Fixed bg / added mobile support / transitions / began shifting to vars

--- a/static/right.css
+++ b/static/right.css
@@ -1,10 +1,42 @@
+:root {
+    --color1: #1e90ff;
+    --color2: #ffffff;
+    --color3: #ffffff;
+    --color4: #ffffff; 
+  }
+
+  @media only screen and (max-width: 768px){
+    .page{
+        flex-direction: column-reverse !important;
+        justify-content: center;
+        align-items: center;
+    }
+    .side{
+        width: 80% !important;
+        aspect-ratio: 3/1;
+    }
+    svg{
+        width: 15vw;
+    }
+  }
 .col{
+    transition: all 1s;
     background: aliceblue;
     width: 50%;
     height: 100%;
     display:flex;
     flex-direction: column;
     justify-content: center;
+}
+.col1{
+    border: 4px solid var(--color1);
+}
+.col2{
+    border: 4px solid var(--color1);
+}.col3{
+    border: 4px solid var(--color4);
+}.col4{
+    border: 4px solid var(--color4);
 }
 .like{
     display: flex;
@@ -13,19 +45,31 @@
     cursor: pointer;
 }
 .side{
+    transition: all 1s;
     display: flex;
     width: 47%;
-    padding: 3%
+    padding: 3%;
+    filter: drop-shadow(-20px 18px 1px var(--color2))
+    drop-shadow(-20px 17px 1.5px var(--color1));
 }
-body{
-    background-color: #1C1B1B;
+
+.sideR{
+    transition: all 1s;
+    filter: drop-shadow(20px -18px 1px var(--color3))
+    drop-shadow(20px -17px 1.5px var(--color4));
 }
+body {
+    background: black;
+  }
 .rating{
     display: flex;
     justify-content: center;
     font-family: monospace;
     flex-direction: column;
     align-items: center;
+}
+a{
+    border-radius: 10px;
 }
 .colorblock{
     width: 50%;
@@ -39,4 +83,27 @@ body{
     height: 100%;
     align-items: center;
     font:caption;
+}
+
+.pop{
+    z-index: 1;
+    position: absolute;
+    width: 90vw;
+    height: 90vh;
+    backdrop-filter: blur(3px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.popup{
+    z-index: 1;
+    width: 50%;
+    aspect-ratio: 1/1;
+    background-color: aliceblue;
+    opacity: 60%;
+    border-radius: 20px 0px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
